--- a/Src/Cappuccino.App/Cappuccino.App/AuthPage.xaml
+++ b/Src/Cappuccino.App/Cappuccino.App/AuthPage.xaml
@@ -1,11 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage 
-             xmlns:xaml="http://xamarin.com/schemas/2014/forms"
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Cappuccino.App.AuthPage">
+    
+ <StackLayout>
 
-    <WebView x:Name="webView" 
+        <Label x:Name="authlbl" Text="AUTH PAGE (todo)"/>
+     
+        <WebView x:Name="webView" 
         Navigating="WebViewNavigating"
         Source="{Binding}"/>
+</StackLayout>
 
 </ContentPage>
